with fom linked

--- a/css/forms.css
+++ b/css/forms.css
@@ -57,6 +57,36 @@ body{
 	position: absolute;
 	z-index: -1;
 }
+.popup{
+	position: fixed;
+	z-index: 99;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.8);
+	width: 100vw;
+	height: 100vh;
+	padding-top: 20px;
+	display: none;
+}
+.popup>.inner{
+	margin: 0 auto;
+	position: fixed;
+	top: 25%;
+	left: 40%;
+	background: rgba(255, 255, 255, 0.4); 
+	padding: 40px;
+	border-radius: 10px;
+}
+.popup>.inner>a>img{
+	width: 200px;
+	border-radius: 10px;
+}
+.popup>span{
+	font-size: 3em;
+	margin-left: 90vw;
+	color: #EF476F;
+	cursor: pointer;
+}
 .main-body{
 	width: 900px;
 	margin: 0 auto;
@@ -113,6 +143,9 @@ body{
 	color: #EF476F;
 	font-variant: small-caps;
 
+}
+.form-group>label>span{
+	color: #ff0000;
 }
 .body-content{
 	width: 900px;
