--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,10 @@ html{
 	font-family: OpenSans-Light;
 	src:url("../fonts/open-sans/OpenSans-Light.ttf");
 }
+@font-face{
+	font-family: OpenSans-Bold;
+	src:url("../fonts/open-sans/OpenSans-Bold.ttf");
+}
 
 body{
 	margin: 0;
@@ -109,9 +113,9 @@ body{
 	border: 0px;
 	border-radius: 0;
 	text-transform: uppercase;
-	font-family: arial, sans-serif;
+	font-family: OpenSans-Bold;
 	font-weight: bold;
-	font-size: 1.062rem;
+	font-size: 1.0755rem;
 }
 .container-fluid{
 	margin: auto;
