--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -175,7 +175,7 @@ body{
 }
 #slideImg{
 	margin-top: 20px;
-	width: 630px;
+	width: 720px;
 	height: 400px;
 	margin: 2% auto;
 	border-radius: 10px;
@@ -185,19 +185,22 @@ body{
   height: 12px;
   width: 12px;
   margin: 0 2px;
-  background-color: #f1f5f8;
+  background: rgb(0, 0, 0, 0);
+  opacity: 100%;
   border-radius: 50%;
-  border: 1px solid #717171;
+  border: 1px solid #fff;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 .outerDot{
-	margin-bottom: 40px;
+	position: relative;
+	top: -60px;
+	margin-bottom: 0px;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
-  border: 6px solid #717171;
+  background-color: #fff;
+  border: 6px solid #fff;
 }
 
 .outer-msg{
