mostly final with everything correct

--- a/css/admission.css
+++ b/css/admission.css
@@ -14,6 +14,10 @@ html{
 	font-family: OpenSans-Bold;
 	src:url("../fonts/open-sans/OpenSans-Bold.ttf");
 }
+@font-face{
+	font-family: OpenSans-Semibold;
+	src:url("../fonts/open-sans/OpenSans-Semibold.ttf");
+}
 
 body{
 	margin: 0;
@@ -46,7 +50,8 @@ body{
 #bg-3{
 	box-sizing: border-box;
 	margin: 0;
-	width: 98.7vw;
+	width: 100vw;
+	max-width: 100%;
 	background: linear-gradient(#12ffff 0%, #cdff12 100%);
 	position: absolute;
 	z-index: -1;
@@ -99,7 +104,7 @@ body{
 	cursor: pointer;
 }
 .main-body{
-	width: 900px;
+	width: 1000px;
 	margin: 0 auto;
 }
 .logo{
@@ -110,7 +115,7 @@ body{
 }
 
 .navigation-body{
-	width: 900px;
+	width: 1000px;
 }
 .navbar-inverse{
 	background: #041771;
@@ -119,7 +124,7 @@ body{
 	text-transform: uppercase;
 	font-family: OpenSans-Bold;
 	font-weight: bold;
-	font-size: 1.0755rem;
+	font-size: 1.23rem;
 }
 .container-fluid{
 	margin: auto;
@@ -138,7 +143,7 @@ body{
 
 	box-sizing: border-box;
     color: #fff;
-    padding: 5px 12.6px;
+    padding: 5px 13.3px;
  
 }
 .dropdown-menu>li{
@@ -153,7 +158,7 @@ body{
 	color: #000;
 }
 .body-content{
-	width: 900px;
+	width: 1000px;
 	padding-bottom: 20px;
 	margin: auto;
 	background: rgb(241, 245, 248);
