--- a/css/history.css
+++ b/css/history.css
@@ -297,7 +297,9 @@ hr{
 	width: 700px;
 	margin-bottom: 4%;
 }
-
+td.bold{
+	font-family: OpenSans-Bold !important;
+}
 .footer{
 	width: 900px;
 	background: rgb(23, 18, 40);
